<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/point_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point_label"
        android:paddingRight="10dip"
        android:gravity="right"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="20dp"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/x_text_view"
                android:text="@string/x_label"
                android:gravity="right"
                android:textStyle="bold"
                android:paddingRight="10dp"/>

            <EditText
                android:id="@+id/x_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/y_text_view"
                android:text="@string/y_label"
                android:paddingRight="10dip"
                android:gravity="right"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/y_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned"
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_point_button"
            android:id="@+id/save_button"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:onClick="onClickSave"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_point_button"
            android:id="@+id/delete_button"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:onClick="onClickDelete"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification_text"
        android:layout_margin="10dp"
        android:textSize="10dp"/>


</LinearLayout>